--- a/my-dream-app/src/app/server/server.component.html
+++ b/my-dream-app/src/app/server/server.component.html
@@ -1,6 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<body>
-<div>Server component</div>
-</body>
-</html>
+<p>{{'Server'}} with ID {{ serverID }} is {{ getServerStatus() }}  </p>
