--- a/my-dream-app/src/app/servers/servers.component.html
+++ b/my-dream-app/src/app/servers/servers.component.html
@@ -1,5 +1,7 @@
 <button
   class="btn btn-primary"
-  [disabled]="!allowNewServer" >Add Server</button>
+  [disabled]="!allowNewServer"
+  (click)="onCreateServer()" >Add Server</button>
+<p>{{ serverCreationStatus }}</p>
 <app-server></app-server>
 <app-server></app-server>
