--- a/my-dream-app/src/app/servers/servers.component.html
+++ b/my-dream-app/src/app/servers/servers.component.html
@@ -1,7 +1,17 @@
+<h3>Server name</h3>
+
+<input
+  type="text"
+  class="form-control"
+  (input)="onUpdateServerName($event)">
+
+<p>{{ serverName }}</p>
+
 <button
   class="btn btn-primary"
   [disabled]="!allowNewServer"
-  (click)="onCreateServer()" >Add Server</button>
+  (click)="onCreateServer()">Add Server
+</button>
 <p>{{ serverCreationStatus }}</p>
 <app-server></app-server>
 <app-server></app-server>
