Two way data binding in comparison to One way

--- a/my-dream-app/src/app/servers/servers.component.html
+++ b/my-dream-app/src/app/servers/servers.component.html
@@ -5,6 +5,11 @@
   class="form-control"
   (input)="onUpdateServerName($event)">
 
+<input
+  type="text"
+  class="form-control"
+  [(ngModel)]="serverName">
+
 <p>{{ serverName }}</p>
 
 <button
