--- a/my-dream-app/src/app/servers/servers.component.html
+++ b/my-dream-app/src/app/servers/servers.component.html
@@ -10,7 +10,7 @@
   class="form-control"
   [(ngModel)]="serverName">
 
-<p>{{ serverName }}</p>
+<!--<p>{{ serverName }}</p>-->
 
 <button
   class="btn btn-primary"
