--- a/my-dream-app/src/app/server/server.component.html
+++ b/my-dream-app/src/app/server/server.component.html
@@ -1,1 +1,5 @@
-<p [ngStyle]="{backgroundColor: getColor()}">{{'Server'}} with ID {{ serverID }} is {{ getServerStatus() }}  </p>
+<p
+  [ngStyle]="{backgroundColor: getColor()}"
+  [ngClass]="{online: serverStatus === 'alive!!'}">
+  {{'Server'}} with ID {{ serverID }} is {{ getServerStatus() }}
+</p>
