--- a/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,3 +1,31 @@
-<p>
-  recipe-detail works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <img src="" alt="" class="img-responsive">
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <h1>recipe name</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="btn-group">
+      <button type="button" class="btn btn-primary dropdown-toggle">manage recipe <span class="caret"></span></button>
+      <ul class="dropdown-menu">
+        <li><a href="#">to shopping list</a></li>
+        <li><a href="#">edit recipe</a></li>
+        <li><a href="#">delete recipe</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    description
+  </div>
+</div><div class="row">
+  <div class="col-xs-12">
+    ingredients
+  </div>
+</div>
